# CxSystem2

./: .gitignore  .travis.yml  CxSystem.py  CxSystemProgrammingConventions.md  CxSystemProgrammingConventions.txt  LICENSE  MANIFEST.in  Pipfile  README.md  Readme  Readme.txt  array_run.py  arrayrun_visualizer.py  cluster_run.py  config_file_converter.py  equation_templates.py  gui_test.py  main.py  main_ADEX.py  main_EIF.py  main_STP.py  parameter_parser.py  physiology_reference.py  pyproject.toml  pytest.ini  requirements.txt  save_data.py  setup.py  slurm.job  stimuli.py  tasklist.md
CxGUI/: gui.py
CxGUI/CxFront/: manage.py
CxGUI/CxFront/CxFront/: settings.py  wsgi.py
CxGUI/CxFront/editor/: urls.py  views.py
CxGUI/CxFront/examples/: markram_step1_anatomy_config.json  markram_step2_anatomy_config.json  pytest_physiology_config.json
CxGUI/raw_website/scripts/: main.js  main_old.js  schema.js
Markram_data/: cell_group_data.py  connectivity_plots.py  internal_synapse_numbers.csv  pathways_anatomy_cxsystem.json  pathways_anatomy_simplifier.py  pathways_single_microcircuit.json
config_files/: Burbank_config.csv  COBAEIF_config.csv  COBAHH_config.csv  CUBA_config.csv  MODVAR_Anatomy_config_slurm.csv  MODVAR_Physiology_config.csv  Markram_config_file.csv  Markram_config_file_Excel.xlsx  Physiological_Parameters_Excel.xlsx  Physiological_Parameters_for_COBAHH.csv  Physiological_Parameters_for_CUBA.csv  Physiological_Parameters_for_calcium.csv  Rev2_Step1alpha_Anatomy_config_taito.csv  Rev2_Step1alpha_Physiology_config.csv  Rev2_Step1gamma_Anatomy_config_customweights.csv  Rev2_Step2gamma_Anatomy_config.csv  Rev2_Step2gamma_Anatomy_config_local.csv  burbank.json  calcium_config_file.csv  cobaeif_cxs2_physiology_config.csv  test.xlsx
config_files/SimplifiedMarkram/: Markram_Step1_Anatomy_config.csv  Markram_Step1_Anatomy_config.json  Markram_Step1_Physiology_config.json  Markram_Step2_Anatomy_config.csv  Markram_Step2_Anatomy_config.json  Markram_Step2_Physiology_config.json
cxsystem2/: VERSION  __init__.py  csc_puhti.job  csc_puhti_sv.job  csc_taito.job  cscs_daint.job
cxsystem2/bui/: bui.py
cxsystem2/bui/cx_bui/: manage.py
cxsystem2/cmd/: cxcluster_cmd.py  cxconfig_cmd.py  cxmetadata_cmd.py  cxserver_cmd.py  cxsystem_cmd.py  cxvisualize_cmd.py
cxsystem2/configuration/: config_file_converter.py
cxsystem2/core/: cxsystem.py  equation_templates.py  exceptions.py  parameter_parser.py  physiology_reference.py  stimuli.py  tools.py  workspace_manager.py
cxsystem2/gui/: gui.py
cxsystem2/gui/cx_gui/: db.sqlite3  manage.py
cxsystem2/gui/raw_website/: index.html
cxsystem2/hpc/: array_run.py  cluster_run.py
cxsystem2/neurodynlib/: __init__.py  multicompartment_models.py  neuron_models.py  receptor_models.py
cxsystem2/neurodynlib/tools/: input_factory.py  plot_tools.py  spike_tools.py
cxsystem2/neurodynlib/tutorial/: 01_basic_use.ipynb  02_export_import.ipynb  03_synaptic_currents.ipynb  (+5 more)
cxsystem2/visualization/: arrayrun_visualizer.py  rasterplot_to_pdf.py  spikedata_to_csvs.py
data_config/config_files/: Burbank_config.csv  COBAEIF_config.csv  COBAHH_config.csv  CUBA_config.csv  MODVAR_Anatomy_config.csv  MODVAR_Anatomy_config_slurm.csv  Markram_config_file.csv  Physiological_Parameters.csv  Physiological_Parameters_for_Burbank.csv  Physiological_Parameters_for_COBAEIF.csv  Physiological_Parameters_for_calcium.csv  Rev2_Step1alpha_Anatomy_config_taito.csv  Rev2_Step1gamma_Anatomy_config_customweights.csv  Rev2_Step1gamma_Anatomy_config_customweights_slurm.csv  Rev2_Step1gamma_Physiology_config.csv  Rev2_Step2gamma_Anatomy_config.csv  Rev2_Step2gamma_Anatomy_config_local.csv  Rev2_Step2gamma_Physiology_config.csv  calcium_config_file.csv  cobaeif_cxs2_anatomy_config.csv  test.csv
data_config/markram_data/: cell_group_data.py  change_calcium.py  config_file_generator.py  pathways_anatomy_factsheets_simplified.json  pathways_anatomy_preprocessed.json  pathways_physiology_factsheets_simplified.json
data_visualizers/: data_visualization.py  movie_maker.py  rasterplot.py  rasterplot_v2.py  rossert_figures_illustrator.py  simple_spike_vm_illustrator.py
docs/: CxSystemProgrammingConventions.md  Makefile  anatomy_config.rst  conf.py  configs.rst  developerguide.rst  examples.rst  index.rst  installation.rst  introduction.rst  localgui.rst  main_uml.puml  make.bat  modelnet_tutorial.rst  neurodynlib.rst  parallelism.rst  physio_tutorial.rst  physiology_config.rst  reference.rst  tasklist.md  tutorials.rst  userguide.rst  usingbsp.rst  visimpl.rst  xxx_overview.rst
docs/source/: conf.py  configs.rst  developerguide.rst  developersguide.rst  examples.rst  index.rst  installation.rst  introduction.rst  overview.rst  parallelism.rst  reference.rst  tutorials.rst  userguide.rst
frontend/: csv_to_json_converter.py  index.html  style.css
frontend/css/: style.css
frontend/scripts/: main.js  schema.js
tests/: _test_python_array_clusterrun.py  csc_puhti_pytest.job  csc_taito_pytest.job  dont_test_cxsystem_COBAEIF.py  test_basic_cxsystem.py  test_change_anat_header_value.py  test_cpp.py  test_cpp_and_array.py  test_cuda.py  test_cxsystem_step2.py  test_python.py  test_python_array_clusterrun.py  test_value_extractor.py
tests/config_files/: pytest_Anatomy_config.csv  pytest_Anatomy_config.json  pytest_Anatomy_config.xlsx  pytest_Anatomy_config_.csv  pytest_Anatomy_config_cluster.csv  pytest_Anatomy_config_cpp_array.csv  pytest_Anatomy_config_cuda_array.csv  pytest_Anatomy_config_python_array.csv  pytest_COBAEIF_config.csv  pytest_COBAEIF_config.xlsx  pytest_COBAEIF_config_make_connection.csv  pytest_COBAEIF_config_make_connection.xlsx  pytest_Physiology_config.csv  pytest_Physiology_config.json  pytest_Physiology_config.xlsx  pytest_Physiology_config_cluster.csv  pytest_Physiology_config_cpp_array.csv  pytest_Physiology_config_cuda_array.csv  pytest_Rev2_Step2gamma_Anatomy_config_local.csv  pytest_Rev2_Step2gamma_Physiology_config.csv
video_input_files/: V1_input_layer_.mat  V1_input_layer_2015_10_30_11_7_31.mat
visualize_other/: local_test.py  main_EIF.py
(+855 files in other folders)
