[tool.poetry]
name = "cxsystem2"
version = "2.1.7"
description = "A cerebral cortex simulation framework"
authors = ["Vafa Andalibi", "Henri Hokkanen", "Simo Vanni <simo.vanni@helsinki.fi>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/VisualNeuroscience-UH/CxSystem2"
repository = "https://github.com/VisualNeuroscience-UH/CxSystem2"
documentation = "https://cxsystem2.readthedocs.io/en/latest/"

include = ["**/csc_taito.job", "tests/**/*.py", "tests/**/*.csv", "tests/**/*.json", "tests/**/*.gz", "cxsystem2/**/*", "cxsystem2/gui/cx_gui/**/*.css", "cxsystem2/gui/cx_gui/**/*.js", "cxsystem2/gui/cx_gui/**/*.html", "cxsystem2/gui/cx_gui/**/*.json"]
exclude = ["**/__pycache__", "**/*.pyc", "**/*.pyo"]

classifiers = [
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
brian2 = "^2.7.1"
brian2genn = "*"
cffi = "*"
cycler = "*"
cython = "*"
docopt = "*"
ipython = "*"
jinja2 = "*"
kiwisolver = "*"
markupsafe = "*"
matplotlib = "*"
mpmath = "*"
numpy = "*"
pandas = "*"
paramiko = "*"
ping3 = "*"
pycparser = "*"
pynacl = "*"
pyparsing = "*"
pytest = "*"
pytest-cov = "*"
python = "^3.11"
python-dateutil = "*"
pytz = "*"
pyyaml = "*"
scp = "*"
scipy = "*"
sqlparse = "*"
sympy = "*"

[tool.poetry.group.full]
optional = true

[tool.poetry.group.full.dependencies]
asn1crypto = "*"
django = ">=5.0.9"
django-extensions = "*"
django-sslserver = "*"
isort = "*"
pyopenssl = "*"
requests = "*"
six = "*"
werkzeug = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
wheel = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cxsystem2 = "cxsystem2.cmd.cxsystem_cmd:main"
cxconfig = "cxsystem2.cmd.cxconfig_cmd:main"
cxcluster = "cxsystem2.cmd.cxcluster_cmd:main"
cxvisualize = "cxsystem2.cmd.cxvisualize_cmd:main"
cxserver = "cxsystem2.cmd.cxserver_cmd:main"
cxmetadata = "cxsystem2.cmd.cxmetadata_cmd:main"

[tool.isort]
profile = "black"
known_third_party = ["matplotlib", "numpy", "pandas", "scipy"]
known_first_party = []
known_localfolder = ["core", "cxsystem2"]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
import_heading_stdlib = "Built-in"
import_heading_thirdparty = "Third-party"
import_heading_firstparty = "First-party"
import_heading_localfolder = "Local"
