[tool.poetry]
name = "cxsystem2"
version = "2.2.10"
description = "A cerebral cortex simulation framework"
authors = ["Vafa Andalibi", "Henri Hokkanen", "Simo Vanni <simo.vanni@helsinki.fi>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/VisualNeuroscience-UH/CxSystem2"
repository = "https://github.com/VisualNeuroscience-UH/CxSystem2"
documentation = "https://cxsystem2.readthedocs.io/en/latest/"

include = ["tests/**/*.py", "tests/**/*.csv", "tests/**/*.json", "tests/**/*.gz", "cxsystem2/**/*", "cxsystem2/gui/cx_gui/**/*.css", "cxsystem2/gui/cx_gui/**/*.js", "cxsystem2/gui/cx_gui/**/*.html", "cxsystem2/gui/cx_gui/**/*.json"]
exclude = ["**/__pycache__", "**/*.pyc", "**/*.pyo"]

classifiers = [
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.compute.dependencies]
brian2 = "2.10.1"
brian2cuda = "^1.0b1"
matplotlib = "*"
numpy = "*"
pandas = "*"
paramiko = "*" # necessary for cluster run
ping3 = "*" # necessary for cluster run
pytest = "*"
scipy = "*"
scp = "*" # necessary for cluster run

[tool.poetry.group.standard]
optional = true

[tool.poetry.group.standard.dependencies]
ipython = "*"
jupyterlab = "^4.3.6"

[tool.poetry.group.development]
optional = true

[tool.poetry.group.development.dependencies]
isort = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
wheel = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cxsystem2 = "cxsystem2.cmd.cxsystem_cmd:main"
cxconfig = "cxsystem2.cmd.cxconfig_cmd:main"
cxcluster = "cxsystem2.cmd.cxcluster_cmd:main"
cxvisualize = "cxsystem2.cmd.cxvisualize_cmd:main"
cxmetadata = "cxsystem2.cmd.cxmetadata_cmd:main"

[tool.isort]
profile = "black"
known_third_party = ["matplotlib", "numpy", "pandas", "scipy"]
known_first_party = []
known_localfolder = ["core", "cxsystem2"]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
import_heading_stdlib = "Built-in"
import_heading_thirdparty = "Third-party"
import_heading_firstparty = "First-party"
import_heading_localfolder = "Local"
